# weston-shell

./: .gitignore  Makefile.am  configure.ac
clients/: Makefile.am  window.h
desktop-shell/: Makefile.am  input-panel.c  shell.c  shell.h
protocol/: Makefile.am
tests/: Makefile.am
